<resources>
    <string name="app_name">NASA-App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_article">ArticleActivity</string>
    <string name="watch_now">Watch now!</string>
    <string name="remember_me">Remember ME</string>
    <string name="api_key">API KEY</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="change">Change</string>
    <string name="is_refreshing">Wait a moment</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>

    <string name="create_account">Create Account</string>
    <string name="empty_name">Empty name</string>
    <string name="accept_regulations">I accept regulations</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="to_short_password">To short password</string>
    <string name="success">Success!</string>
    <string name="user_created">User %s created. Now you can login to our app :)</string>
    <string name="name_to_long">User name is to long</string>
    <string name="to_long_password">Password is too long</string>
    <string name="account">Account</string>

    <string name="article_saved">Article saved</string>
    <string name="article_deleted">Article deleted</string>
    <string name="article_not_found">Article not found</string>

    <string name="email_resent">Email sent</string>


    <string name="menu_articles">Articles</string>
    <string name="menu_saved_articles">Saved Articles</string>
    <string name="menu_settings">Settings</string>

    <!--SETTINGS-->
    <string name="daily_notifications">Daily notifications</string>
    <string name="current_daily_notification">Current daily notification: %02d:%02d</string>

    <!--DAILY NOTIFICATION BOTTOM SHEET-->
    <string name="daily_notifications_message">Do you want to receive daily reminder about article? Click
    below and select time, on which the application should notify you about new article.</string>
    <string name="set_notification">Set notification</string>
    <string name="daily_notification_set">Daily notification has been set</string>

    <!-- COMMENTS -->
    <string name="comments_comments">Comments</string>
    <string name="comments_write_a_comment">Write a comment</string>
    <string name="comments_comment_posted">Comment has been posted</string>
    <string name="comments_edited_comment_format">%1$s (edited)</string>
    <string name="comments_comment_edited">Comment edited</string>

    <string name="edit_comment_edit_comment">Edit Comment</string>

    <!--NOTIFICATION-->
    <string name="new_article">New article is now available</string>

    <!--ERRORS-->
    <string name="unexpected_error">Unexpected Error</string>
    <string name="empty_password_error">Empty password</string>
    <string name="no_user_error">No user</string>
    <string name="not_email_error">It isn\'t an email</string>
    <string name="empty_email_error">Empty Email</string>
    <string name="wrong_password_error">Wrong password</string>
    <string name="user_exists_error">User exists</string>
    <string name="no_internet_error">No internet</string>
    <string name="password_not_matches_error">Password doesn\'t match</string>
    <string name="to_weak_password_error">Ad least 6 characters</string>
    <string name="no_connection_to_server_error">No connection to server</string>


    <!--DATE FORMAT-->
    <string name="today_date_time_format">Today %1$s</string>
    <string name="yesterday_date_time_format">Yesterday %1$s</string>

    <string name="date_sting">Date:</string>
    <string name="select_date">Select article date</string>
    <string name="already_exists">Article alredy exists</string>
    <string name="delete">Delete</string>
    <string name="success_full_saved">Successful Saved</string>
    <string name="error_by_saving">Error By Saving</string>
    <string name="success_full_deleted">Succesful Deleted</string>
    <string name="error_by_deleting">Error by deleting</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_message">No internet connection. Check connection and try later.</string>
    <string name="logged_in">Logged in</string>
    <string name="no_articles">No Articles</string>
    <string name="open_article">Open article</string>
    <string name="email_resend_info">On your email has been send a message with verification link.</string>
    <string name="resend">Resend</string>
    <string name="confirmed_go_to_login">Email Verified</string>

    <string name="sync">Synchronizing your data</string>
    <string name="colon">:</string>
    <string name="two_places_int_format">%02d</string>

</resources>
