<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawablePadding="8dp"
        android:text="@string/daily_notifications"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_notifications"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/messageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/daily_notifications_message"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />


    <com.example.nasa_app.views.HourSelectView
        android:id="@+id/hourSelectView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/messageTv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setButton"
        style="@style/BlackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/set_notification"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hourSelectView" />

</androidx.constraintlayout.widget.ConstraintLayout>